--- a/index.html
+++ b/index.html
@@ -34,10 +34,7 @@
 
         <figure class="featured-image">
           <img src="criminal.png" alt="Im a bad, bad boy." />
-          <figcaption>
-            Di Reno Snatcher imself, Gino, wey dem snap wit im stolen goods just
-            small time afta di operation.
-          </figcaption>
+          <figcaption>Him remorseless.</figcaption>
         </figure>
 
         <!-- Modern Audio Player Component -->
